# picongpu-alpaka

examples/Bunch/include/simulation_defines/param/: visColorScales.param  visualization.param
examples/KelvinHelmholtz/include/simulation_defines/param/: memory.param  particleConfig.param  speciesInitialization.param  visualization.param
examples/KelvinHelmholtz/submit/: weak_00001gpus.cfg  weak_00002gpus.cfg  weak_00004gpus.cfg  weak_00008gpus.cfg  weak_00016gpus.cfg  weak_00032gpus.cfg  weak_00064gpus.cfg  weak_00128gpus.cfg  weak_00256gpus.cfg  weak_00512gpus.cfg  weak_01024gpus.cfg  weak_02048gpus.cfg  weak_04096gpus.cfg  weak_08192gpus.cfg  weak_16384gpus.cfg  weak_18252gpus.cfg
examples/KelvinHelmholtz/submit/strong_1024to16384/: strong_01024gpus.cfg  strong_02048gpus.cfg  strong_08192gpus.cfg  strong_18252gpus.cfg
examples/KelvinHelmholtz/submit/strong_1to128/: strong_00001gpus.cfg  strong_00002gpus.cfg  strong_00004gpus.cfg  strong_00008gpus.cfg  strong_00016gpus.cfg  strong_00032gpus.cfg  strong_00064gpus.cfg  strong_00128gpus.cfg
examples/KelvinHelmholtz/submit/strong_32to4096/: strong_00032gpus.cfg  strong_00128gpus.cfg  strong_00512gpus.cfg  strong_01024gpus.cfg  strong_02048gpus.cfg  strong_04096gpus.cfg
examples/LaserWakefield/include/simulation_defines/param/: componentsConfig.param  gasConfig.param  laserConfig.param  memory.param  particleConfig.param  species.param  speciesInitialization.param  visualization.param
examples/SingleParticleCurrent/include/simulation_defines/param/: visualization.param
examples/SingleParticleRadiationWithLaser/include/simulation_defines/param/: visColorScales.param  visualization.param
examples/SingleParticleTest/include/particles/: ParticlesInitOneParticle.hpp
examples/SingleParticleTest/include/simulation_defines/param/: visualization.param
examples/TiltedFoil/include/simulation_defines/param/: dimension.param  gasConfig.param  gridConfig.param  laserConfig.param  memory.param  particleConfig.param  precision.param  species.param  speciesDefinition.param  speciesInitialization.param  visualization.param
examples/TiltedFoil/submit/: 16gpus.cfg  2cpus.cfg  4cpus.cfg
examples/WeibelTransverse/include/simulation_defines/param/: visualization.param
src/libPMacc/: CMakeLists.txt  FindPMacc.cmake  PMaccConfig.cmake  PMaccConfig_alpaka.cmake
src/libPMacc/examples/gameOfLife2D/: CMakeLists.txt  main.cpp
src/libPMacc/examples/gameOfLife2D/include/: Evolution.hpp  Simulation.hpp
src/libPMacc/include/: DeviceManager.hpp  Environment.def  Environment.hpp  basicOperations.hpp  pmacc_types.hpp  types.h  types_alpaka.hpp
src/libPMacc/include/algorithms/: ForEach.hpp  TypeCast.hpp
src/libPMacc/include/communication/: manager_common.h
src/libPMacc/include/compileTime/: AllCombinations.hpp
src/libPMacc/include/dimensions/: DataSpace.hpp  DataSpace.tpp
src/libPMacc/include/eventSystem/: Manager.tpp
src/libPMacc/include/eventSystem/events/: CudaEvent.hpp  kernelEvents.hpp
src/libPMacc/include/eventSystem/streams/: EventStream.hpp  StreamController.hpp
src/libPMacc/include/eventSystem/tasks/: StreamTask.hpp  StreamTask.tpp  TaskCopyDeviceToDevice.hpp  TaskCopyDeviceToHost.hpp  TaskCopyHostToDevice.hpp  TaskGetCurrentSizeFromDevice.hpp  TaskKernel.hpp  TaskKernel.tpp  TaskSetCurrentSizeOnDevice.hpp  TaskSetValue.hpp
src/libPMacc/include/mappings/elements/: Vectorize.hpp
src/libPMacc/include/mappings/threads/: ThreadCollective.hpp
src/libPMacc/include/math/vector/: Vector.hpp
src/libPMacc/include/memory/boxes/: CachedBox.hpp  DataBoxDim1Access.hpp  MultiBox.hpp  PitchedBox.hpp  SharedBox.hpp
src/libPMacc/include/memory/buffers/: Buffer.hpp  DeviceBuffer.hpp  DeviceBufferIntern.hpp  ExchangeIntern.hpp  HostBuffer.hpp  HostBufferIntern.hpp  MappedBufferIntern.hpp
src/libPMacc/include/memory/dataTypes/: Array.hpp
src/libPMacc/include/nvidia/: atomic.hpp
src/libPMacc/include/nvidia/functors/: Assign.hpp
src/libPMacc/include/nvidia/memory/: MemoryInfo.hpp
src/libPMacc/include/nvidia/reduce/: Reduce.hpp
src/libPMacc/include/nvidia/rng/: RNG.hpp
src/libPMacc/include/particles/: IdProvider.def  IdProvider.hpp  ParticlesBase.hpp  ParticlesBase.kernel  ParticlesBase.tpp
src/libPMacc/include/particles/operations/: CountParticles.hpp
src/libPMacc/include/simulationControl/: SimulationHelper.hpp
src/picongpu/: CMakeLists.txt  main.cpp
src/picongpu/include/: simulation_classTypes.hpp  simulation_types.hpp
src/picongpu/include/algorithms/: Set.hpp
src/picongpu/include/fields/: FieldE.kernel  FieldE.tpp  FieldJ.kernel  FieldJ.tpp  FieldManipulator.hpp  FieldManipulator.kernel  FieldTmp.kernel  FieldTmp.tpp
src/picongpu/include/fields/MaxwellSolver/: Solvers.hpp
src/picongpu/include/fields/background/: cellwiseOperation.hpp
src/picongpu/include/fields/currentDeposition/: Solver.def  Solver.hpp
src/picongpu/include/fields/laserProfiles/: laserGaussianBeam.hpp  laserPulseFrontTilt.hpp
src/picongpu/include/initialization/: InitialiserController.hpp
src/picongpu/include/particles/: InterpolationForPusher.hpp  Particles.kernel  Particles.tpp  ParticlesFunctors.hpp  ParticlesInit.kernel
src/picongpu/include/particles/access/: Cell2Particle.tpp
src/picongpu/include/particles/ionization/: ionization.hpp
src/picongpu/include/particles/manipulators/: AssignImpl.hpp  CreateParticlesFromParticleImpl.hpp  DriftImpl.def  DriftImpl.hpp  FreeImpl.hpp  IManipulator.def  IManipulator.hpp  NoneImpl.hpp  (+10 more)
src/picongpu/include/plugins/: BinEnergyParticles.hpp  EnergyParticles.hpp  IntensityPlugin.hpp  PluginController.hpp  PositionsParticles.hpp  SliceFieldPrinter.tpp  SumCurrents.hpp
src/picongpu/include/simulationControl/: MySimulation.hpp
src/picongpu/submit/: gpu_numa_aware  numa_aware  numa_aware_dualCore  submitAction.sh
src/picongpu/submit/hypnos-hzdr/: cpu_k20_profile.tpl  cpu_k80_profile.tpl  cpu_laserDualCore_profile.tpl  cpu_laser_profile.tpl  e2630v3_profile.tpl  k20_profile.tpl  k80_profile.tpl  laser_profile.tpl
src/picongpu/submit/titan-ornl/: batch_profile.tpl
(+65 files in other folders)
